my fifth commit

--- a/dlitheday5.ipynb
+++ b/dlitheday5.ipynb
@@ -100,11 +100,7 @@
    "source": [
     "#reading data\n",
     "data=pd.read_csv('data.csv')\n",
-    "data.head()\n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
+    "data.head()   "
    ]
   },
   {
@@ -784,7 +780,7 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline"
    ]
   },
   {
